Fix z-index issue with mobile nav menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -153,6 +153,7 @@ header {
   top: 80px;
   right: 30px;
   transition: visibility 0s linear 0.3s, opacity 0.3s;
+  z-index: 10;
 }
 
 /* ################ #Contact Me Section ################## */
